test/spec_vectors/store/fail/module_33.wat
(module (memory 1) (func $type-address-empty-in-return (return (i32.store))))